Updating swagger, implementing and testing more contacts
