# api/api.go
@@ -49,9 +49,8 @@ func API(store store.Store, httpClient *http.Client) *gin.Engine {
 			secure.GET("/messages/history", user.GetMessageHistoryEndpoint)
 			secure.GET("/messages/sync/:mid", user.SyncMessagesEndpoint)
 			secure.DELETE("/messages/:mid", user.DeleteMessageEndpoint)
-			secure.POST("/contacts")
-			secure.GET("/contacts")
-			secure.DELETE("/contacts/:cid")
+			secure.POST("/contacts", user.AddContactsEndpoint)
+			secure.GET("/contacts", user.GetContactsEndpoint)
 			secure.POST("/signout", user.SignoutEndpoint)
 		}
 	}
