# api/swagger.json
@@ -18,15 +18,6 @@
   "paths": {
     "/login": {
       "post": {
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "schemes": [
-          "https"
-        ],
         "summary": "User login via email and password.",
         "operationId": "login",
         "parameters": [
@@ -57,12 +48,6 @@
     },
     "/login/google": {
       "post": {
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
         "summary": "Login or register via a Google account.",
         "operationId": "googleLogin",
         "parameters": [
@@ -93,12 +78,6 @@
     },
     "/register": {
       "post": {
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
         "schemes": [
           "https"
         ],
@@ -132,12 +111,6 @@
     },
     "/user/devices": {
       "get": {
-        "produces": [
-          "application/json"
-        ],
-        "schemes": [
-          "https"
-        ],
         "tags": [
           "user"
         ],
@@ -173,15 +146,6 @@
         }
       },
       "post": {
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "schemes": [
-          "https"
-        ],
         "tags": [
           "user"
         ],
@@ -227,12 +191,6 @@
     },
     "/user/messages/history": {
       "get": {
-        "produces": [
-          "application/json"
-        ],
-        "schemes": [
-          "https"
-        ],
         "tags": [
           "user"
         ],
@@ -254,7 +212,7 @@
         ],
         "responses": {
           "200": {
-            "$ref": "#/responses/messageHistory"
+            "$ref": "#/responses/messageHistoryResponse"
           },
           "401": {
             "$ref": "#/responses/error"
@@ -270,12 +228,6 @@
     },
     "/user/messages/sync/{mid}": {
       "get": {
-        "produces": [
-          "application/json"
-        ],
-        "schemes": [
-          "https"
-        ],
         "tags": [
           "user"
         ],
@@ -303,7 +255,7 @@
         ],
         "responses": {
           "200": {
-            "$ref": "#/responses/messageHistory"
+            "$ref": "#/responses/messageHistoryResponse"
           },
           "401": {
             "$ref": "#/responses/error"
@@ -319,9 +271,6 @@
     },
     "/user/messages/{mid}": {
       "delete": {
-        "schemes": [
-          "https"
-        ],
         "tags": [
           "user"
         ],
@@ -365,12 +314,6 @@
     },
     "/user/signout": {
       "post": {
-        "produces": [
-          "application/json"
-        ],
-        "schemes": [
-          "https"
-        ],
         "tags": [
           "user"
         ],
@@ -413,12 +356,6 @@
     },
     "/verify/{token}": {
       "get": {
-        "produces": [
-          "application/json"
-        ],
-        "schemes": [
-          "https"
-        ],
         "summary": "Consume a user email verification token.",
         "operationId": "verifyToken",
         "parameters": [
@@ -434,6 +371,83 @@
             "$ref": "#/responses/success"
           },
           "400": {
+            "$ref": "#/responses/error"
+          },
+          "500": {
+            "$ref": "#/responses/error"
+          }
+        }
+      }
+    },
+    "/user/contacts": {
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Retrieve user contacts.",
+        "operationId": "getContacts",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "X-USER-TOKEN",
+            "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "X-USER-ID",
+            "in": "header",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/contactListResponse"
+          },
+          "400": {
+            "$ref": "#/responses/error"
+          },
+          "401": {
+            "$ref": "#/responses/error"
+          },
+          "500": {
+            "$ref": "#/responses/error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Upload user contacts.",
+        "operationId": "addContacts",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "X-USER-TOKEN",
+            "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "X-USER-ID",
+            "in": "header",
+            "required": true
+          },
+          {
+            "name": "contacts",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/contactList"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/success"
+          },
+          "401": {
             "$ref": "#/responses/error"
           },
           "500": {
@@ -570,7 +584,7 @@
         }
       }
     },
-    "messageHistoryResponse": {
+    "messageHistory": {
       "type": "object",
       "properties": {
         "messages": {
@@ -651,6 +665,57 @@
           "type": "boolean"
         }
       }
+    },
+    "contactPhoneNumber": {
+      "type": "object",
+      "required": [
+        "name",
+        "number"
+      ],
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "number": {
+          "type": "string"
+        }
+      }
+    },
+    "contactBody": {
+      "type": "object",
+      "required": [
+        "name",
+        "cid",
+        "phone_numbers"
+      ],
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "cid": {
+          "type": "string"
+        },
+        "phone_numbers": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/contactPhoneNumber"
+          }
+        }
+      }
+    },
+    "contactList": {
+      "type": "object",
+      "required": [
+        "contacts"
+      ],
+      "properties": {
+        "contacts": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/contactBody"
+          }
+        }
+      }
     }
   },
   "responses": {
@@ -684,10 +749,16 @@
         "$ref": "#/definitions/loginResponse"
       }
     },
-    "messageHistory": {
-      "description": "MessageHistoryResponse contains user messages.",
+    "messageHistoryResponse": {
+      "description": "MessageHistoryReponse contains user messages.",
       "schema": {
-        "$ref": "#/definitions/messageHistoryResponse"
+        "$ref": "#/definitions/messageHistory"
+      }
+    },
+    "contactListResponse": {
+      "description": "ContactListResponse contains user contacts.",
+      "schema": {
+        "$ref": "#/definitions/contactList"
       }
     },
     "success": {
